--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,7 +18,9 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-font-family-base: Poppin,system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont,
     'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol'
+    'Segoe UI Emoji', 'Segoe UI Symbol';
+  --homepage-card-bg: white;
+  --ifm-container-width: 1320px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -32,6 +34,15 @@
   --ifm-color-primary-lighter: #268fff;
   --ifm-color-primary-lightest: #4da3ff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --homepage-card-bg: var(--ifm-code-background);
+}
+
+*{
+  font-family: var(--ifm-font-family-base) !important;
+}
+
+.qf-main{
+  background-color: #2b2b2b14;
 }
 
 .navbar__logo {
@@ -51,27 +62,7 @@
 
 .navbar__items{
   height: 50%;
-}
-
-.qf-nav-menu{
-  color: var(--ifm-color-base);
-  position: absolute;
-  left: var(--ifm-navbar-padding-horizontal);
-  top: 50%;
-  display: flex;
-  gap: 32px;
-  height: 44px;
-  align-items: center;
-}
-
-.qf-nav-menu a{
-  color: var(--ifm-color-base);
-  font-weight: var(--ifm-font-weight-semibold);
-}
-
-.qf-nav-menu a:hover{
-  color: var(--ifm-color-primary);
-  cursor: pointer;
+  position:relative;
 }
 
 .qf-search-bar{
@@ -81,14 +72,117 @@
 .qf-display-link-blue{
   color: var(--ifm-color-primary);
 }
-@media screen and (min-width: 997px){
-  .navbar__link.qf-display-link{
-    display: none;
+
+.navbar__items .qf-display-link:nth-of-type(2){
+  left: 0;
+}
+
+.navbar__items .qf-display-link:nth-of-type(2).navbar__link--active{
+  color:var(--ifm-color-base)
+}
+
+.qf-display-link{
+  position: absolute; 
+  top: 100%;
+  padding-left:0;
+}
+
+.navbar__items .qf-display-link:nth-of-type(3){
+  left: 5rem;
+}
+
+.navbar__title:hover{
+  color: var(--ifm-color-base) !important;
+}
+
+.qf-homepage-card-actions{
+  position:absolute;
+  width: 100%;
+  bottom:0px;
+  /* background-color:var(--homepage-card-bg); */
+  padding: 0 !important;
+}
+
+.qf-homepage-card{
+  border-radius: 16px !important;
+  min-width: 370px;
+  position:relative;
+  min-height: 560px;
+  height:fit-content;
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0) !important;
+  color: var(--ifm-color-base) !important;
+  background-color: var(--homepage-card-bg) !important;
+  padding: 0;
+
+}
+
+.qf-homepage-card-media{
+  height: auto !important;
+  border-radius: 16px;
+}
+
+.qf-homepage-card-title{
+  font-size: 20px !important;
+  font-weight: 600 !important;
+  padding-bottom: 8px;
+  color: var(--ifm-color-base) !important;
+}
+
+.qf-cards-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  row-gap: 32px;
+  column-gap: 1px;
+  justify-items: center;
+}
+
+/* main{
+  background-color: #2b2b2b14;
+} */
+
+@media screen and (max-width: 1160px) {
+  .qf-cards-container{
+    grid-template-columns: auto;
+  }
+
+  .qf-homepage-card-actions{
+    display: none !important;
+  }
+
+  .qf-homepage-card{
+    width: 100%;
+    max-width: 800px;
+    min-width: 0px;
+    min-height: 0;
+    height: fit-content;
+  }
+
+  .qf-homepage-card-collapse{
+    height: fit-content !important;
+    min-height: 0 !important;
+  }
+
+  .navbar__inner{
+    padding: 0;
+  }
+
+  .qf-search-bar{
+    right: 0 !important;
   }
 }
 
-@media screen and (max-width: 996px){
-  .qf-nav-menu{
-    display: none;
+@media screen and (max-width: 1440px){
+  main{
+    padding: 0 var(--ifm-navbar-padding-horizontal);
   }
+  .qf-homepage-card{
+    min-width: none;
+  }
+
 }
+
+/* @media screen and (max-width: 996px) {
+  .qf-cards-container{
+    grid-template-columns: 1fr;
+  }
+} */
