--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,7 +20,9 @@
     'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
   --homepage-card-bg: white;
+  --homepage-card-action-bg: white;
   --ifm-container-width: 1320px;
+  --ifm-navbar-padding-horizontal: 1.25rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -35,6 +37,7 @@
   --ifm-color-primary-lightest: #4da3ff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --homepage-card-bg: var(--ifm-code-background);
+  --homepage-card-action-bg: #39393A;
 }
 
 *{
@@ -83,7 +86,7 @@
 
 .qf-display-link{
   position: absolute; 
-  top: 100%;
+  top: 120%;
   padding-left:0;
 }
 
@@ -99,7 +102,7 @@
   position:absolute;
   width: 100%;
   bottom:0px;
-  /* background-color:var(--homepage-card-bg); */
+  /* background-color:var(--homepage-card-action-bg); */
   padding: 0 !important;
 }
 
@@ -107,7 +110,7 @@
   border-radius: 16px !important;
   min-width: 370px;
   position:relative;
-  min-height: 560px;
+  min-height: 570px;
   height:fit-content;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0) !important;
   color: var(--ifm-color-base) !important;
